--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/node-spacecraft/spacecraft#readme",
   "dependencies": {
-    "debug": "^3.0.1"
+    "debug": "^3.0.1",
+    "tracer": "^0.8.11"
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
